hphp/test/zend/good/ext/openssl/tests/bug61930.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("openssl")) die("skip");
}
