hphp/test/zend/bad/ext/zlib/tests/ob_003.php.skipif
<?php
if (!extension_loaded("zlib")) die("skip need ext/zlib");
if (false === stristr(PHP_SAPI, "cgi")) die("skip need sapi/cgi");
?>